--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">POC HCE</string>
+    <string name="servicedesc">description</string>
+    <string name="aiddescription">description aid</string>
 </resources>
